my IDE told me i could use toList() but it didn't tell me it only works in java 17